--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "tell-your-story": "start-storybook",
-    "show-your-story": "build-storybook -c .storybook -o .out"
+    "dev": "start-storybook",
+    "build": "build-storybook -c .storybook -o .out",
+    "deploy": "storybook-to-aws-s3 --bucket-path=story.inflearn.com/stories --aws-profile=inflab"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -14,6 +15,7 @@
     "@storybook/addon-notes": "^5.0.6",
     "@storybook/addon-storysource": "^5.0.6",
     "@storybook/html": "^5.0.6",
+    "@storybook/storybook-deployer": "^2.8.1",
     "@storybook/theming": "^5.0.6",
     "babel-loader": "^8.0.5",
     "node-sass": "^4.11.0",
